--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@skeletonlabs/skeleton-svelte": "^1.5.1",
     "@sveltejs/vite-plugin-svelte": "^6.1.1",
     "svelte": "^5.38.1",
+    "svelte-lightbox": "^1.1.7",
     "vite": "^7.1.2"
   },
   "dependencies": {
