--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@skeletonlabs/skeleton": "^3.2.0",
     "@skeletonlabs/skeleton-svelte": "^1.5.1",
     "@sveltejs/vite-plugin-svelte": "^6.1.1",
+    "@tailwindcss/forms": "^0.5.10",
     "svelte": "^5.38.1",
     "svelte-lightbox": "^1.1.7",
     "vite": "^7.1.2"
   },
   "dependencies": {
+    "@lucide/svelte": "^0.542.0",
     "@supabase/supabase-js": "^2.56.0",
     "@tailwindcss/vite": "^4.1.12",
     "tailwindcss": "^4.1.12"
