--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@lucide/svelte": "^0.542.0",
     "@supabase/supabase-js": "^2.56.0",
     "@tailwindcss/vite": "^4.1.12",
-    "tailwindcss": "^4.1.12"
+    "d3": "^7.9.0",
+    "tailwindcss": "^4.1.12",
+    "topojson-client": "^3.1.0",
+    "world-atlas": "^2.0.2"
   }
 }
